--- a/conf/config.tmpl.yaml
+++ b/conf/config.tmpl.yaml
@@ -9,20 +9,17 @@ hydra:
     dir: logs/${now:%Y-%m-%d_%H-%M-%S}_${run_name}
 
 url: http://127.0.0.1:7860
-device: cpu
-work_device: cpu
-threads: 1
 
 wildcards_dir: path/to/wildcards/folder
 
 model_a: path/to/model_a/file
 model_b: path/to/model_b/file
 model_c: path/to/model_c/file
-merge_mode: weighted_sum  # see https://github.com/s1dlx/meh/wiki
-prune: False
-weights_clip: False
-rebasin: False
-rebasin_iterations: 1
+
+threads: 6
+
+merge_mode: weighted_sum
+model_arch: sdxl  # Specify model architecture (sd1, sdxl, sd3)
 
 optimiser: bayes                 # tpe
 bounds_transformer: False        # bayes only
@@ -31,9 +28,9 @@ guided_optimisation: False
 batch_size: 1
 init_points: 1
 n_iters: 1
-img_average_type: arithmetic # geometric, arithmetic, quadratic
 
 save_imgs: False
+img_average_type: arithmetic # geometric, arithmetic, quadratic
 
 # scorer by type:
 # Prompt-Image Alignment:               blip, clip
@@ -69,10 +66,11 @@ scorer_alt_location:
   # example above, default downloads them in the scorer_model_dir(this option is here if you already have them downloaded somewhere else)
 scorer_print_individual: False
 
-
-save_best: False
-best_format: safetensors # ckpt
+save_best: True
 best_precision: 16 # 32
 
-draw_unet_weights: False
-draw_unet_base_alpha: False
+visualizations:
+  scatter_plot: True
+  unet_diagram: True
+  convergence_plot: True
+  heatmap: True
