--- a/conf/config.tmpl.yaml
+++ b/conf/config.tmpl.yaml
@@ -3,7 +3,7 @@ defaults:
   - payloads: cargo
   - optimisation_guide: guide
 
-run_name: ${optimizer}_${scorer_method}
+run_name: ${merge_mode}_${scorer_method}
 hydra:
   run:
     dir: logs/${now:%Y-%m-%d_%H-%M-%S}_${run_name}
@@ -19,7 +19,7 @@ model_paths:  # Use a list to specify model or lora paths
   - path/to/model_b.safetensors
   - path/to/model_c.safetensors
   - path/to/model_n.safetensors
-base_model_index: 2  # Use 3rd model as the base (0, 1, 2, ...)
+base_model_index:  # For methods that require subtract/add_difference (0, 1, 2, ...)
 
 device: cpu # specify device to merge on (cpu, cuda)
 threads: 4
@@ -27,17 +27,43 @@ threads: 4
 merge_mode: weighted_sum # specify merge method https://github.com/ljleb/sd-mecha/blob/main/sd_mecha/merge_methods/__init__.py
 model_arch: sdxl  # specify model architecture (sd1, sdxl, sd3)
 
-optimizer: bayes                 # tpe
-bounds_transformer: False        # bayes only
-latin_hypercube_sampling: False  # bayes only
-random_state: 1                  # seed for optimization run
-guided_optimization: False       # custom stuff, untested
-batch_size: 1                    # amount of images per payload
-init_points: 1                   # exploration
-n_iters: 1                       # exploitation
+optimizer:
+  bayes: True               # Enable Bayesian optimization
+  tpe: False                # Enable Tree-structured Parzen Estimator optimization (not implemented)
+  atpe: False               # Enable Adaptive TPE optimization (not implemented)
 
+  # Bayesian Optimization Settings:
+  random_state: 1           # Seed for optimization run
+  bounds_transformer: False  # Reduce the search space during optimization, potentially finding better solutions faster, but might miss the global optimum (bayes only)
+  latin_hypercube_sampling: False # Explore the parameter space more evenly, potentially leading to a better starting point for optimization (bayes only)
+  load_log_file: None       # Path to the run JSON log file to resume a run (optional)
+
+  # Acquisition Function Settings (bayes only):
+  acquisition_function:
+    kind: ucb              # Type of acquisition function (ucb, ei, poi)
+    kappa: 3               # Exploration-exploitation parameter (for ucb)
+    xi: 0.05               # Exploration-exploitation parameter (for ei and poi)
+    kappa_decay: 0.98      # Kappa decay factor (for ucb)
+    kappa_decay_delay: ${optimizer.init_points}
+
+  # Suggestions:
+  # - Short runs (1-10 iterations): kind: poi, bounds_transformer: True
+  # - 10 init_points, 10 n_iters: bounds_transformer: True, latin_hypercube_sampling: True
+  # - Medium runs (10-50 iterations): kind: ei, xi: 0.05, bounds_transformer: False/True, latin_hypercube_sampling: True
+  # - Long runs (50+ iterations): kind: ucb, kappa: 3.0, latin_hypercube_sampling: True
+
+  # Probability of Improvement (PI): Favors exploitation, focusing on areas where the model predicts high scores with high confidence.
+  # Expected Improvement (EI): Provides a balance between exploration and exploitation, considering both predicted scores and uncertainty.
+  # Upper Confidence Bound (UCB): Encourages more exploration, focusing on areas with high uncertainty, even if the predicted scores are not the highest.
+
+  # General Settings:
+  guided_optimization: False      # Custom stuff, untested
+  init_points: 10                 # Exploration iterations
+  n_iters: 10                     # Exploitation iterations
+
+batch_size: 1                    # amount of images per payload
 save_imgs: False
-img_average_type: arithmetic # geometric, arithmetic, quadratic
+img_average_type: arithmetic     # geometric, arithmetic, quadratic
 
 # scorer by type:
 # Prompt-Image Alignment:               blip, clip
