more than 1 new dict for recipe optimization, hydra log name still off, mm code saving not work in this yet and dunno what else

--- a/conf/config.tmpl.yaml
+++ b/conf/config.tmpl.yaml
@@ -29,9 +29,9 @@ model_arch: sdxl  # specify model architecture (sd1, sdxl, sd3, flux)
 save_merge_method_code: False # Utility for easier tracking of method changes (True to enable)
 
 recipe_optimization:
-  enabled: False  # Enable/disable the feature
+  enabled: False # Enable/disable the feature
   recipe_path: path/to/recipe.mecha
-  optimization_target:  # Merge node identifier or hyperparameter names
+  target_nodes: '&1' # Optimize the hypers at selected nodes. Example: '&2' or ['&3', '&4']
 
 optimizer:
   bayes: True               # Enable Bayesian optimization
